# goal_glide

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/workflows/: flake8.yml  mypy.yml  test.yml
docs/: Makefile  api.rst  cli.rst  conf.py  index.rst  tui.rst
goal_glide/: __init__.py  cli.py  config.py  exceptions.py  models.py  storage.py  tui.css  tui.py
goal_glide/commands/: common.py  config_cmds.py  goal_cmds.py  pomo_cmds.py  reminder_cmds.py  report_cmds.py  stats_cmds.py  tag_cmds.py  thought_cmds.py  version_cmds.py
goal_glide/data/: quotes.json
goal_glide/models/: __init__.py  goal.py  session.py  storage.py  thought.py
goal_glide/services/: analytics.py  notify.py  pomodoro.py  quotes.py  reminder.py  render.py  report.py
goal_glide/templates/: report_template.j2
goal_glide/utils/: format.py  tag.py  timefmt.py
requests/: __init__.py
rich/: __init__.py  bar.py  console.py  progress.py  table.py  tree.py
tests/: conftest.py  test_analytics.py  test_cli.py  test_cli_error_handler.py  test_config_module.py  test_error_handler.py  test_goal_archive.py  test_goal_complete.py  test_goal_subgoals.py  test_goal_update.py  test_main_module.py  test_migration_completed.py  test_migration_tags.py  test_models.py  test_notify_service.py  test_phases.py  test_pomo_quotes.py  test_pomo_reminder_flow.py  test_pomo_status.py  test_pomodoro_service.py  test_quotes.py  test_reminder.py  test_render_service.py  test_report_cli.py  test_report_service.py  test_root_storage.py  test_stats_cmd.py  test_storage.py  test_storage_list_goals.py  test_tags.py  test_thoughts.py  test_tui.py  test_tui_logic.py  test_utils.py  test_version_cmd.py
tinydb/: __init__.py
