[tool.poetry]
name = "goal_glide"
version = "0.0.0"
description = "Goal management and pomodoro tracking"
authors = ["Unknown <unknown@example.com>"]
packages = [{ include = "goal_glide" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "*"
rich = "*"
tinydb = "*"
requests = "*"
apscheduler = "*"
notify2 = "*"
textual = ">=0.55,<1.0"
jinja2 = ">=3.1"
pandas = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
hypothesis = "*"
mypy = "*"
sphinx = "*"
beautifulsoup4 = "*"
types-requests = "*"

[tool.black]
target-version = ['py311']

[tool.ruff]

[tool.mypy]
python_version = '3.11'
ignore_missing_imports = true
exclude = 'tinydb/'

[[tool.mypy.overrides]]
module = "tinydb.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
